fix: resource-container overflow

--- a/web/src/less/memo-editor.less
+++ b/web/src/less/memo-editor.less
@@ -111,7 +111,7 @@
     @apply w-full flex flex-row justify-start flex-wrap;
 
     > .resource-container {
-      @apply mt-1 mr-1 flex flex-row justify-start items-center flex-nowrap bg-gray-100 px-2 py-1 rounded cursor-pointer hover:bg-gray-200;
+      @apply max-w-full mt-1 mr-1 flex flex-row justify-start items-center flex-nowrap bg-gray-100 px-2 py-1 rounded cursor-pointer hover:bg-gray-200;
 
       > .icon-img {
         @apply w-4 h-auto mr-1 text-gray-500;
